add form component and contact forms

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,6 +23,45 @@
     --white-bis: hsl(0, 0%, 98%);
     --white: hsl(0, 0%, 100%);
 
+    --black-transparent-50: hsla(0, 0%, 7%, 0.5);
+    --black-bis-transparent-50: hsla(0, 0%, 4%, 0.5);
+    --black-ter-transparent-50: hsla(0, 0%, 14%, 0.5);
+    --grey-darker-transparent-50: hsla(0, 0%, 21%, 0.5);
+    --grey-dark-transparent-50: hsla(0, 0%, 29%, 0.5);
+    --grey-transparent-50: hsla(0, 0%, 48%, 0.5);
+    --grey-light-transparent-50: hsla(0, 0%, 71%, 0.5);
+    --grey-lighter-transparent-50: hsla(0, 0%, 86%, 0.5);
+    --grey-lightest-transparent-50: hsla(0, 0%, 93%, 0.5);
+    --white-ter-transparent-50: hsla(0, 0%, 96%, 0.5);
+    --white-bis-transparent-50: hsla(0, 0%, 98%, 0.5);
+    --white-transparent-50: hsla(0, 0%, 100%, 0.5);
+
+    --black-transparent-20: hsla(0, 0%, 7%, 0.2);
+    --black-bis-transparent-20: hsla(0, 0%, 4%, 0.2);
+    --black-ter-transparent-20: hsla(0, 0%, 14%, 0.2);
+    --grey-darker-transparent-20: hsla(0, 0%, 21%, 0.2);
+    --grey-dark-transparent-20: hsla(0, 0%, 29%, 0.2);
+    --grey-transparent-20: hsla(0, 0%, 48%, 0.2);
+    --grey-light-transparent-20: hsla(0, 0%, 71%, 0.2);
+    --grey-lighter-transparent-20: hsla(0, 0%, 86%, 0.2);
+    --grey-lightest-transparent-20: hsla(0, 0%, 93%, 0.2);
+    --white-ter-transparent-20: hsla(0, 0%, 96%, 0.2);
+    --white-bis-transparent-20: hsla(0, 0%, 98%, 0.2);
+    --white-transparent-20: hsla(0, 0%, 100%, 0.2);
+
+    --black-transparent-80: hsla(0, 0%, 7%, 0.8);
+    --black-bis-transparent-80: hsla(0, 0%, 4%, 0.8);
+    --black-ter-transparent-80: hsla(0, 0%, 14%, 0.8);
+    --grey-darker-transparent-80: hsla(0, 0%, 21%, 0.8);
+    --grey-dark-transparent-80: hsla(0, 0%, 29%, 0.8);
+    --grey-transparent-80: hsla(0, 0%, 48%, 0.8);
+    --grey-light-transparent-80: hsla(0, 0%, 71%, 0.8);
+    --grey-lighter-transparent-80: hsla(0, 0%, 86%, 0.8);
+    --grey-lightest-transparent-80: hsla(0, 0%, 93%, 0.8);
+    --white-ter-transparent-80: hsla(0, 0%, 96%, 0.8);
+    --white-bis-transparent-80: hsla(0, 0%, 98%, 0.8);
+    --white-transparent-80: hsla(0, 0%, 100%, 0.8);
+
     --color-dark: #050505;
     --color-darkish: #404040;
     --color-lightish: #e6e6e6;
