--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,15 @@
     --purple: hsl(271, 100%, 71%);
     --red: hsl(348, 86%, 61%);
 
+    --orange-light: rgba(255, 149, 117, 0.5);
+    --yellow-light: hsl(44,  100%, 97%, 0.5);
+    --green-light: hsl(153, 53%,  73%, 0.5);
+    --turquoise-light: hsl(171, 100%, 71%, 0.5);
+    --cyan-light: hsl(207, 61%,  73%, 0.5);
+    --blue-light: hsl(229, 53%,  73%, 0.5);
+    --purple-light: hsl(271, 100%, 91%, 0.5);
+    --red-light: hsl(348, 86%, 81%, 0.5);
+
     --black: hsl(0, 0%, 7%);
     --black-bis: hsl(0, 0%, 4%);
     --black-ter: hsl(0, 0%, 14%);
